[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesqual-pypsa"
version = "0.1.0"
description = "mesqual-interface for PyPSA"
readme = "README.md"
license = {file = "LICENSES/LGPL-3.0-or-later.txt"}
authors = [
    {name = "Helge Esch"}
]
maintainers = [
    {name = "Helge Esch"}
]
dependencies = [
    "pandas",
    "pypsa",
]

[project.urls]
Homepage = "https://mesqual.io"
Repository = "https://github.com/helgeesch/mesqual-pypsa"
Documentation = "https://docs.mesqual.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["mesqual_pypsa", "mesqual_pypsa.*"]